--- a/compat/Makefile
+++ b/compat/Makefile
@@ -35,6 +35,7 @@ compat-$(CONFIG_COMPAT_KERNEL_2_6_39) += \
 	kstrtox.o
 compat-$(CONFIG_COMPAT_KERNEL_3_0) += compat-3.0.o
 compat-$(CONFIG_COMPAT_KERNEL_3_2) += compat-3.2.o
+compat-$(CONFIG_COMPAT_KERNEL_3_3) += compat-3.3.o
 
 compat-$(CONFIG_COMPAT_CORDIC) += cordic.o
 compat-$(CONFIG_COMPAT_CRC8) += crc8.o
