--- a/compat/Makefile
+++ b/compat/Makefile
@@ -2,6 +2,7 @@ obj-m += compat.o
 #compat-objs :=
 
 obj-$(CONFIG_COMPAT_FIRMWARE_CLASS) += compat_firmware_class.o
+obj-$(CONFIG_COMPAT_NET_SCH_CODEL) += sch_codel.o
 
 compat-y += main.o
 
