--- a/compat/Makefile
+++ b/compat/Makefile
@@ -49,6 +49,7 @@ compat-$(CONFIG_COMPAT_KERNEL_3_5) += \
 	compat-3.5.o \
 	user_namespace.o
 compat-$(CONFIG_COMPAT_KERNEL_3_7) += compat-3.7.o
+compat-$(CONFIG_COMPAT_KERNEL_3_8) += compat-3.8.o
 
 compat-$(CONFIG_COMPAT_CORDIC) += cordic.o
 compat-$(CONFIG_COMPAT_CRC8) += crc8.o
